--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 is a quick story of me and this 
                                 website.
                                 <hr color="black">
-                                Metri Naveen An GCET STUDENT 
+                                Metri Naveen a GCET STUDENT 
                                 and an Enthusiast for AI. I
                                 love to solve programming problems 
                                 in most efficient ways. Apart from 
@@ -176,13 +176,13 @@
 
                                 I do my work mainly in C-Language and
                                 Python which are my stronger section.
-                                Besides these I know about LINUX,Amozon book publishing.
+                                Besides these I know about LINUX,Amazon book publishing.
 
                                 <hr color="black">
 
                                 This website is basically about 
                                 myself and the future project ideas 
-                                which are in my head.
+                                which I am eager to build.
 
                                 Thanks again for reading this, 
                                 because of people like you,
