--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         </td>
 
                         <td>
-                            <font face="Comic sans MS" size="6">
+                            <font face="Courier New" size="6">
                                 <b>METRI NAVEEN KUMAR</b>
                             </font>
                         </td>
